--- a/css/custom.css
+++ b/css/custom.css
@@ -94,7 +94,7 @@ main::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("../files/R.png") center no-repeat;
+    background: url("../files/R.webp") center no-repeat;
     background-size: contain;
     filter: grayscale(1) brightness(1) blur(5px);
     z-index: -1;
